argo-rollouts/strategy/BlueGreen/full-rollout-example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollout-bluegreen-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: blue-green.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rollout-bluegreen-active
            port:
              number: 80
      - path: /preview
        pathType: Prefix
        backend:
          service:
            name: rollout-bluegreen-preview
            port:
              number: 80
